        kitchen-prefs-empty: Fixes a layout issue with empty kitchen tabs
    Fixes
        Plugins with vmethod hooks can now be reloaded on OS X
        Lua's os.system() now works on OS X
        Fixed default arguments in Lua gametype detection functions
        Circular lua dependencies (reqscript/script_environment) fixed
        Prevented crash in Items::createItem()
        gui/hack-wish now properly assigns quality to items.
        gui/gm-editor handles lua tables properly
        search: fixed crash in unit list after cancelling a job
        steam-engine:
          - fixed a crash on arena load
          - number keys (e.g. 2/8) take priority over cursor keys when applicable
        tweak fps-min fixed
        workflow: Fixed some issues with stuck jobs
          - Note: Existing stuck jobs must be cancelled and re-added
        zone: Fixed a crash in the unit list after cancelling a job (and several other potential crashes)
    Misc Improvements
        autolabor:
          - Stopped modification of labors that shouldn't be modified for brokers/diplomats
          - Prioritize skilled dwarves more efficiently
          - Prevent dwarves from running away with tools from previous jobs
        dwarfmonitor:
          - widgets' positions, formats, etc. are now customizable (see Readme)
          - weather display now separated from the date display
          - New mouse cursor widget
        full-heal: "-r" option removes corpses
        gui/gm-editor
          - Pointers can now be displaced
          - Added some useful aliases: "item" for the selected item, "screen" for the current screen, etc.
          - Now avoids errors with unrecognized types
        gui/hack-wish: renamed to gui/create-item
        "keybinding list" accepts a context
        lever:
          - Lists lever names
          - "lever pull" can be used to pull the currently-selected lever
        memview: Fixed display issue
        nyan: Can now be stopped with dfhack-run