@@ -30,6 +30,7 @@ DFHack Future
         Fixed default arguments in Lua gametype detection functions
         Circular lua dependencies (reqscript/script_environment) fixed
         Prevented crash in Items::createItem()
+        buildingplan: Now supports hatch covers
         gui/hack-wish now properly assigns quality to items.
         gui/gm-editor handles lua tables properly
         search: fixed crash in unit list after cancelling a job
